--- a/.github/workflows/feed.yml
+++ b/.github/workflows/feed.yml
@@ -22,8 +22,22 @@ jobs:
           format: '- ${year}/${02month}/${02day} - [${title}](${url})'
           start_flag: "<!-- gist feed start -->"
           end_flag: "<!-- gist feed end -->"
+      - name: articles feed
+        uses: sarisia/actions-readme-feed@v1
+        id: articles
+        with:
+          url: |
+            https://www.getrevue.co/profile/Neko7sora?format=rss
+            https://note.com/neko7sora/rss
+            https://zenn.dev/neko7sora/feed
+            https://qiita.com/Neko7sora/feed
+          file: 'README.md'
+          timezone: 'Asia/Tokyo'
+          format: '- ${year}/${02month}/${02day} - [${title}](${url})'
+          start_flag: "<!-- articles feed start -->"
+          end_flag: "<!-- articles feed end -->"
       - name: push to master
-        if: steps.feed.outputs.changed == true
+        if: (steps.feed.outputs.changed == true || steps.articles.outputs.changed == true)
         id: commit
         uses: sarisia/actions-commit@master
         with:
